[workspace]
members = [
    "src/adapter",
    "src/adapter-types",
    "src/alloc",
    "src/alloc-default",
    "src/arrow-util",
    "src/audit-log",
    "src/auth",
    "src/authenticator",
    "src/avro",
    "src/aws-secrets-controller",
    "src/aws-util",
    "src/balancerd",
    "src/build-info",
    "src/build-tools",
    "src/catalog",
    "src/catalog-debug",
    "src/catalog-protos",
    "src/ccsr",
    "src/cloud-api",
    "src/cloud-provider",
    "src/cloud-resources",
    "src/cluster",
    "src/cluster-client",
    "src/clusterd",
    "src/compute",
    "src/compute-client",
    "src/compute-types",
    "src/controller",
    "src/controller-types",
    "src/durable-cache",
    "src/dyncfg",
    "src/dyncfg-launchdarkly",
    "src/dyncfg-file",
    "src/dyncfgs",
    "src/environmentd",
    "src/expr",
    "src/expr-derive",
    "src/expr-derive-impl",
    "src/expr-parser",
    "src/expr-test-util",
    "src/fivetran-destination",
    "src/foundationdb",
    "src/frontegg-auth",
    "src/frontegg-client",
    "src/frontegg-mock",
    "src/http-util",
    "src/interchange",
    "src/kafka-util",
    "src/license-keys",
    "src/lowertest",
    "src/lowertest-derive",
    "src/lsp-server",
    "src/materialized",
    "src/materialized",
    "src/metabase",
    "src/metrics",
    "src/mysql-util",
    "src/mz",
    "src/mz-debug",
    "src/npm",
    "src/oidc-mock",
    "src/orchestrator",
    "src/orchestrator-kubernetes",
    "src/orchestrator-process",
    "src/orchestrator-tracing",
    "src/orchestratord",
    "src/ore",
    "src/ore-build",
    "src/ore-proc",
    "src/persist",
    "src/persist-cli",
    "src/persist-client",
    "src/persist-proc",
    "src/persist-types",
    "src/pgcopy",
    "src/pgrepr",
    "src/pgrepr-consts",
    "src/pgtest",
    "src/pgtz",
    "src/pgwire",
    "src/pgwire-common",
    "src/postgres-client",
    "src/postgres-util",
    "src/prof",
    "src/prof-http",
    "src/proto",
    "src/regexp",
    "src/repr",
    "src/repr-test-util",
    "src/rocksdb",
    "src/rocksdb-types",
    "src/s3-datagen",
    "src/secrets",
    "src/segment",
    "src/server-core",
    "src/service",
    "src/sql",
    "src/sql-lexer",
    "src/sql-parser",
    "src/sql-pretty",
    "src/sql-server-util",
    "src/sqllogictest",
    "src/ssh-util",
    "src/storage",
    "src/storage-client",
    "src/storage-controller",
    "src/storage-operators",
    "src/storage-types",
    "src/testdrive",
    "src/timely-util",
    "src/timestamp-oracle",
    "src/tls-util",
    "src/tracing",
    "src/transform",
    "src/txn-wal",
    "src/walkabout",
    "test/metabase/smoketest",
    "test/test-util",
]

# We make all members of the workspace default members, *except* for a few
# specifically chosen exceptions. This is enforced by the linter. See
# misc/python/materialize/cli/lint-cargo.py for the list of exceptions.
#
# Unfortunately Cargo does not provide a more elegant way to express exclusions
# from the workspace's default members.
default-members = [
    "src/adapter",
    "src/adapter-types",
    "src/alloc",
    "src/arrow-util",
    "src/audit-log",
    "src/auth",
    "src/authenticator",
    "src/avro",
    "src/aws-secrets-controller",
    "src/aws-util",
    "src/balancerd",
    "src/build-info",
    "src/build-tools",
    "src/catalog",
    "src/catalog-debug",
    "src/catalog-protos",
    "src/ccsr",
    "src/cloud-api",
    "src/cloud-provider",
    "src/cloud-resources",
    "src/cluster",
    "src/cluster-client",
    "src/clusterd",
    "src/compute",
    "src/compute-client",
    "src/compute-types",
    "src/controller",
    "src/controller-types",
    "src/durable-cache",
    "src/dyncfg",
    "src/dyncfg-launchdarkly",
    "src/dyncfg-file",
    "src/dyncfgs",
    "src/environmentd",
    "src/expr",
    "src/expr-derive",
    "src/expr-derive-impl",
    "src/expr-parser",
    "src/expr-test-util",
    "src/foundationdb",
    "src/frontegg-auth",
    "src/frontegg-client",
    "src/frontegg-mock",
    "src/http-util",
    "src/interchange",
    "src/kafka-util",
    "src/license-keys",
    "src/lowertest",
    "src/lowertest-derive",
    "src/lsp-server",
    "src/materialized",
    "src/metabase",
    "src/metrics",
    "src/mysql-util",
    "src/mz",
    "src/mz-debug",
    "src/npm",
    "src/oidc-mock",
    "src/orchestrator",
    "src/orchestrator-kubernetes",
    "src/orchestrator-process",
    "src/orchestrator-tracing",
    "src/orchestratord",
    "src/ore",
    "src/ore-build",
    "src/ore-proc",
    "src/persist",
    "src/persist-cli",
    "src/persist-client",
    "src/persist-proc",
    "src/persist-types",
    "src/pgcopy",
    "src/pgrepr",
    "src/pgrepr-consts",
    "src/pgtest",
    "src/pgtz",
    "src/pgwire",
    "src/pgwire-common",
    "src/postgres-client",
    "src/postgres-util",
    "src/prof",
    "src/prof-http",
    "src/proto",
    "src/regexp",
    "src/repr",
    "src/repr-test-util",
    "src/rocksdb",
    "src/rocksdb-types",
    "src/s3-datagen",
    "src/secrets",
    "src/segment",
    "src/server-core",
    "src/service",
    "src/sql",
    "src/sql-lexer",
    "src/sql-parser",
    "src/sql-pretty",
    "src/sql-server-util",
    "src/sqllogictest",
    "src/ssh-util",
    "src/storage",
    "src/storage-client",
    "src/storage-controller",
    "src/storage-operators",
    "src/storage-types",
    "src/testdrive",
    "src/timely-util",
    "src/timestamp-oracle",
    "src/tls-util",
    "src/tracing",
    "src/transform",
    "src/txn-wal",
    "src/walkabout",
    "test/metabase/smoketest",
    "test/test-util",
]

exclude = [
    # All WASM crates are split into their own workspace to avoid needles cache
    #  invalidations for the core Mz crates.
    "misc/wasm/*",
    # Ignore any Rust dependencies that python packages might pull in.
    "misc/python/venv/*",
]

# Use Cargo's new feature resolver, which can handle target-specific features,
# and checks rust-version compatibility.
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94.1"

[workspace.dependencies]
ahash = { version = "0.8.12", default-features = false }
aho-corasick = "1.1.4"
allocation-counter = "0"
anyhow = "1.0.102"
array-concat = "0.5.5"
arrayvec = "0.7.6"
arrow = { version = "57", default-features = false }
arrow-ipc = "57"
askama = { version = "0.12.1", default-features = false, features = ["config", "serde-json"] }
assert_cmd = "2.2.0"
async-compression = { version = "0.4.27", features = ["bzip2-sys", "gzip", "tokio", "xz", "zstd"] }
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-config = { version = "1.8.15", default-features = false, features = ["sso"] }
aws-credential-types = { version = "1.2.10", features = ["hardcoded-credentials"] }
aws-lc-rs = "1"
aws-sdk-kms = { version = "1.104.0", default-features = false, features = ["rt-tokio"] }
aws-sdk-s3 = { version = "1.129.0", default-features = false, features = ["rt-tokio"] }
aws-sdk-secretsmanager = { version = "1.103.0", default-features = false, features = ["rt-tokio"] }
aws-sdk-sts = { version = "1.41.0", default-features = false, features = ["rt-tokio"] }
aws-sigv4 = "1.3.6"
aws-smithy-runtime = { version = "1.9.8", features = ["connector-hyper-0-14-x"] }
aws-smithy-runtime-api = "1.10.0"
aws-smithy-types = { version = "1.1.8", features = ["byte-stream-poll-next"] }
aws-types = "1.3.9"
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
azure_core = "0.21.0"
azure_identity = "0.21.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
backtrace = "0.3.76"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = "1.3.2"
buildid = "1.0.4"
bytefmt = "0.1.7"
bytemuck = { version = "1.23.1", features = ["extern_crate_alloc", "latest_stable_rust"] }
byteorder = "1.5"
bytes = "1.11.1"
bytesize = "2.3.1"
cc = "1.2.59"
cfg-if = "1.0.4"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde", "std"] }
chrono-tz = { version = "0.8.1", features = ["case-insensitive", "serde"] }
clap = { version = "4.5.60", features = ["derive"] }
columnar = "0.12.1"
columnation = "0.1.2"
compact_bytes = "0.2.1"
compile-time-run = "0.2.12"
console-subscriber = "0.5.0"
crc32fast = "1.5.0"
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
csv = "1.4.0"
csv-async = { version = "1.3.1", features = ["tokio"] }
csv-core = "0.1.13"
ctor = "0.9.1"
custom-labels = "0.4.6"
darling = "0.23.0"
datadriven = "0.9.0"
deadpool-postgres = "0.10.3"
dec = "0.4.9"
derivative = "2.2.0"
differential-dataflow = "0.23.0"
differential-dogs3 = "0.23.0"
digest = "0.10.7"
dirs = "6.0.0"
domain = { version = "0.11.1", default-features = false, features = ["resolv"] }
duckdb = { version = "1.4.3", default-features = false, features = ["native-tls"] }
dynfmt = { version = "0.1.5", features = ["curly"] }
either = "1.15.0"
encoding = "0.2.0"
enum-iterator = "2.1.0"
enum-kinds = "0.5.1"
fail = { version = "0.5.1", features = ["failpoints"] }
fallible-iterator = "0.2.0"
fancy-regex = "0.17.0"
flate2 = "1.1.9"
foundationdb = { version = "0.10.0", default-features = false, features = ["embedded-fdb-include", "fdb-7_3"] }
futures = "0.3.32"
futures-core = "0.3.31"
futures-task = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.3"
globset = "0.4.18"
governor = "0.10.1"
half = "2"
headers = "0.4.1"
hex = "0.4.3"
hex-literal = "1.1.0"
hibitset = "0.6.4"
hmac = "0.12.1"
http = "1.4.0"
http-body-util = "0.1.3"
httparse = "1.8.0"
humantime = "2.3.0"
hyper = { version = "1.9.0", features = ["http1", "server"] }
hyper-openssl = "0.10.2"
hyper-util = "0.1.20"
iceberg = "0.7.0"
iceberg-catalog-rest = "0.7.0"
imbl = { version = "7.0.0", features = ["serde"] }
include_dir = "0.7.4"
indexmap = { version = "2.10.0", default-features = false, features = ["std"] }
indicatif = "0.18.4"
insta = { version = "1.47.2", features = ["json", "serde"] }
ipnet = "2.12.0"
itertools = "0.14.0"
jemalloc_pprof = "0.8.2"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
junit-report = "0.8.3"
k8s-controller = "0.10.0"
k8s-openapi = { version = "0.27.0", features = ["schemars", "v1_32"] }
kube = { version = "3.1.0", default-features = false, features = ["client", "derive", "openssl-tls", "runtime", "ws"] }
launchdarkly-server-sdk = { version = "2.6.2", default-features = false }
lgalloc = "0.6.0"
libc = "0.2.184"
lru = "0.16.3"
maplit = "1.0.2"
mappings = "0.7.2"
md-5 = "0.10.6"
mime = "0.3.16"
murmur2 = "0.1.0"
mysql_async = { version = "0.36.2", default-features = false, features = ["binlog", "minimal", "native-tls-tls", "tracing"] }
mysql_common = { version = "0.35.5", default-features = false, features = ["chrono"] }
native-tls = { version = "0.2.14", features = ["alpn"] }
nix = { version = "0.31.2", features = ["fs", "signal"] }
num = "0.4.3"
num-traits = "0.2.15"
num_cpus = "1.17.0"
num_enum = "0.7.6"
open = "5.3.4"
openssh = { version = "0.11.6", default-features = false, features = ["native-mux"] }
openssh-mux-client = "0.17.9"
openssl = { version = "0.10.79", features = ["vendored"] }
openssl-probe = "0.1.6"
openssl-sys = { version = "0.9.108", features = ["vendored"] }
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["experimental_trace_batch_span_processor_with_async_runtime", "rt-tokio"] }
ordered-float = { version = "5.1.0", features = ["serde"] }
os_info = "3.11.0"
parquet = { version = "57", default-features = false, features = ["arrow", "async", "brotli", "flate2", "flate2-zlib-rs", "lz4", "snap", "zstd"] }
paste = "1.0.11"
pem = "3.0.6"
phf = { version = "0.13.1", features = ["uncased"] }
phf_codegen = "0.13.1"
pin-project = "1.1.11"
postgres = "0.19.12"
postgres-openssl = "0.5.2"
postgres-protocol = "0.6.9"
postgres-replication = "0.6.7"
postgres-types = { version = "0.2.11", features = ["with-chrono-0_4", "with-uuid-1"] }
postgres_array = "0.11.0"
pprof = "0.15.0"
pprof_util = "0.8.2"
predicates = "3.1.4"
pretty = "0.12.5"
prettyplease = "0.2"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
prometheus = { version = "0.14.0", default-features = false }
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
proptest-derive = { version = "0.8.0", features = ["boxed_union"] }
prost = { version = "0.14.3", features = ["no-recursion-limit"] }
prost-build = "0.14.3"
prost-reflect = { version = "0.16.3", features = ["serde"] }
prost-types = "0.14.3"
protobuf-native = "0.3.3"
protobuf-src = "2.1.1"
proxy-header = "0.1.2"
qcell = "0.5"
quote = "1.0.45"
rand = "0.9.4"
rand-8 = { package = "rand", version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.9.0"
rdkafka = { version = "0.29.0", features = ["cmake-build", "libz-static", "ssl-vendored", "zstd"] }
rdkafka-sys = { version = "4.3.0", features = ["cmake-build", "libz-static", "ssl-vendored", "zstd"] }
regex = "1.12.3"
regex-syntax = "0.8.10"
reqwest = { version = "0.12.28", features = ["blocking", "charset", "cookies", "default-tls", "http2", "json", "native-tls-vendored", "stream"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.8.0"
rlimit = "0.11.0"
rocksdb = { version = "0.24.0", default-features = false, features = ["lz4", "snappy", "zstd"] }
ropey = "1.6.1"
rpassword = "7.5.1"
ryu = "1.0.23"
schemars = { version = "1.2.1", features = ["uuid1"] }
scopeguard = "1.2.0"
seahash = "4.1.0"
segment = { version = "0.2.6", default-features = false, features = ["native-tls-vendored"] }
semver = "1.0.28"
sentry = { version = "0.46.1", default-features = false, features = ["backtrace", "contexts", "debug-images", "transport"] }
sentry-panic = "0.46.1"
sentry-tracing = "0.46.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_bytes = "0.11.19"
serde_json = "1.0.149"
serde_plain = "1.0.2"
serde_repr = "0.1.20"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sha2 = "0.10.9"
shell-words = "1.1.1"
similar = "2.7.0"
similar-asserts = "2.0"
smallvec = "1.15.1"
snap = "1.1.1"
socket2 = "0.6.3"
ssh-key = "0.6.7"
stacker = "0.1.24"
static_assertions = "1.1"
strsim = "0.11.1"
subtle = "2.6.1"
syn = { version = "2.0.106", features = ["extra-traits", "full", "parsing", "printing"] }
sysctl = "0.7.1"
sysinfo = "0.29.11"
tabled = "0.20.0"
tar = "0.4.44"
tempfile = "3.27.0"
termcolor = "1.4.1"
thiserror = "2.0.18"
tiberius = { version = "0.12", default-features = false, features = ["chrono", "native-tls", "sql-browser-tokio", "tds73"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats", "use_std"] }
tikv-jemallocator = { version = "0.6", features = ["background_threads", "profiling", "stats", "unprefixed_malloc_on_supported_platforms"] }
time = "0.3.17"
timely = "0.29.0"
tokio = { version = "1.52.1", features = ["full", "test-util"] }
tokio-metrics = "0.5.0"
tokio-native-tls = "0.3.1"
tokio-openssl = "0.6.5"
tokio-postgres = "0.7.15"
tokio-stream = "0.1.18"
tokio-test = "0.4.5"
tokio-util = "0.7.18"
toml = "0.8.22"
toml_edit = { version = "0.22.26", features = ["serde"] }
tonic = { version = "0.14.2", features = ["gzip", "transport"] }
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tower = { version = "0.5.3", features = ["balance", "buffer", "filter", "limit", "load-shed", "retry", "timeout", "util"] }
tower-http = { version = "0.6.7", features = ["auth", "cors", "decompression-br", "decompression-deflate", "decompression-gzip", "decompression-zstd", "map-response-body", "trace", "util"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tower-sessions = "0.14.0"
tower-sessions-memory-store = "0.14.0"
tracing = "0.1.44"
tracing-capture = "0.1.0"
tracing-core = "0.1.35"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "tracing-log"] }
tungstenite = "0.28.0"
turmoil = "0.7.1"
uncased = "0.9.7"
unicode-normalization = "0.1.25"
unicode-width = "0.2.2"
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = "5.4.0"
uuid = "1.19.0"
version-compare = "0.2.1"
walkdir = "2.5.0"
which = "8"
yansi = "1.0.1"
zeroize = { version = "1.8.2", features = ["derive", "serde"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate-flate2"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package]
# Compile the backtrace crate and its dependencies with all optimizations, even
# in dev builds, since otherwise backtraces can take 20s+ to symbolize. With
# optimizations enabled, symbolizing a backtrace takes less than 1s.
addr2line = { opt-level = 3 }
adler2 = { opt-level = 3 }
backtrace = { opt-level = 3 }
gimli = { opt-level = 3 }
miniz_oxide = { opt-level = 3 }
object = { opt-level = 3 }
rustc-demangle = { opt-level = 3 }
timely = { opt-level = 3 }
differential-dataflow = { opt-level = 3 }
mz-compute = { opt-level = 3 }
mz-transform = { opt-level = 3 }

# Recommended by insta
insta = { opt-level = 3 }
similar = { opt-level = 3 }

[profile.release]
# Compile time seems similar to "lto = false", runtime ~10% faster
lto = "thin"

# Emit full debug info, allowing us to easily analyze core dumps from
# staging (and, in an emergency, also prod).
#
# This does not negatively impact the sizes of the main binaries
# (clusterd and environmentd), since we split the debuginfo from those
# and ship it separately to an s3 bucket before building their
# docker containers.
debug = 2

[profile.optimized]
inherits = "release"
split-debuginfo = "unpacked"
lto = "off"
debug = 1
incremental = true

[profile.ci]
inherits = "optimized"
debug = "line-tables-only"
debug-assertions = true

# IMPORTANT: when patching a dependency, you should only depend on "main",
# "master", or an upstream release branch (e.g., "v7.x"). Do *not* depend on a
# feature/patch branch (e.g., "fix-thing" or "pr-1234"). Feature/patch branches
# tend to get rewritten or disappear (e.g., because a PR is force pushed or gets
# merged), after which point it becomes impossible to build that historical
# version of Materialize.
[patch.crates-io]
# Waiting on https://github.com/sfackler/rust-postgres/pull/752.
postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-replication = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-openssl = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres_array = { git = "https://github.com/MaterializeInc/rust-postgres-array" }

# Waiting on https://github.com/MaterializeInc/serde-value/pull/35.
serde-value = { git = "https://github.com/MaterializeInc/serde-value.git" }

# Waiting for resolution of https://github.com/launchdarkly/rust-server-sdk/issues/116
launchdarkly-server-sdk = { git = "https://github.com/MaterializeInc/rust-server-sdk", rev = "3e0a0b98b09a2970f292577a07e1c9382b65b5da" }

# Waiting on https://github.com/edenhill/librdkafka/pull/4051.
rdkafka = { git = "https://github.com/MaterializeInc/rust-rdkafka.git" }
rdkafka-sys = { git = "https://github.com/MaterializeInc/rust-rdkafka.git" }

# Need to upstream a few PRs related to test builders.
#
# Note: All changes in our fork of tiberius should be pushed to the `mz_changes` branch.
tiberius = { git = "https://github.com/MaterializeInc/tiberius", rev="64ca594cc22ed67d072c2d0110455da50539e1cd" }

# Allows us to use bzip2-sys rather than the rust reimpl.
# All changes should go to the `mz_changes` branch.
# Once https://github.com/Nullus157/async-compression/pull/364 lands we can remove this.
async-compression = { git = "https://github.com/MaterializeInc/async-compression.git", rev = "fe7411eb6104a02a89e2c3a76ab326dd6594214d" }

# Custom iceberg features for mz
# All changes should go to the `mz_changes` branch.
iceberg = { git = "https://github.com/MaterializeInc/iceberg-rust.git", rev = "c31a98afe789" }
iceberg-catalog-rest = { git = "https://github.com/MaterializeInc/iceberg-rust.git", rev = "c31a98afe789" }

# Custom duckdb crate to support mz needs
# All changes should go to the `mz_changes` branch.
# The main change is allowing the TLS implementation to be selected via features.
# Hopefully we can upstream these changes eventually.
# Additionally we keep the apache crates updated to latest versions.
duckdb = { git = "https://github.com/MaterializeInc/duckdb-rs.git", rev = "752c7efe2582" }


# BEGIN LINT CONFIG
# DO NOT EDIT. Automatically generated by bin/gen-lints.
[workspace.lints.rust]
unknown_lints = "allow"
non_local_definitions = "allow"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_import_braces = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(stamped, coverage, nightly_doc_features, release, tokio_unstable)'] }

[workspace.lints.rustdoc]

[workspace.lints.clippy]
style = { level = "allow", priority = -1 }
complexity = { level = "allow", priority = -1 }
large_enum_variant = { level = "allow", priority = 0 }
result_large_err = { level = "allow", priority = 0 }
mutable_key_type = { level = "allow", priority = 0 }
stable_sort_primitive = { level = "allow", priority = 0 }
map_entry = { level = "allow", priority = 0 }
box_default = { level = "allow", priority = 0 }
drain_collect = { level = "allow", priority = 0 }
bool_comparison = "warn"
clone_on_ref_ptr = "warn"
no_effect = "warn"
unnecessary_unwrap = "warn"
dbg_macro = "warn"
todo = "warn"
wildcard_dependencies = "warn"
zero_prefixed_literal = "warn"
borrowed_box = "warn"
deref_addrof = "warn"
double_must_use = "warn"
double_parens = "warn"
extra_unused_lifetimes = "warn"
needless_borrow = "warn"
needless_question_mark = "warn"
needless_return = "warn"
redundant_pattern = "warn"
redundant_slicing = "warn"
redundant_static_lifetimes = "warn"
single_component_path_imports = "warn"
unnecessary_cast = "warn"
useless_asref = "warn"
useless_conversion = "warn"
builtin_type_shadow = "warn"
duplicate_underscore_argument = "warn"
double_negations = "warn"
unnecessary_mut_passed = "warn"
wildcard_in_or_patterns = "warn"
crosspointer_transmute = "warn"
excessive_precision = "warn"
panicking_overflow_checks = "warn"
as_conversions = "warn"
match_overlapping_arm = "warn"
zero_divided_by_zero = "warn"
must_use_unit = "warn"
suspicious_assignment_formatting = "warn"
suspicious_else_formatting = "warn"
suspicious_unary_op_formatting = "warn"
mut_mutex_lock = "warn"
print_literal = "warn"
same_item_push = "warn"
useless_format = "warn"
write_literal = "warn"
redundant_closure = "warn"
redundant_closure_call = "warn"
unnecessary_lazy_evaluations = "warn"
partialeq_ne_impl = "warn"
redundant_field_names = "warn"
transmutes_expressible_as_ptr_casts = "warn"
unused_async = "warn"
disallowed_methods = "warn"
disallowed_macros = "warn"
disallowed_types = "warn"
from_over_into = "warn"
mod_module_files = "warn"
needless_pass_by_ref_mut = "warn"
borrow_interior_mutable_const = "warn"
or_fun_call = "warn"
let_unit_value = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
debug_assert_with_mut_call = "warn"
if_same_then_else = "warn"
unused_result_ok = "warn"
collection_is_never_read = "warn"
redundant_guards = "warn"
precedence_bits = "warn"
significant_drop_in_scrutinee = "warn"
# END LINT CONFIG
