[package]
name = "fuzz"
version = "0.0.1"
edition = "2021"
publish = false
rust-version = "1.58.0"

[[bin]]
name = "fuzz_parse_statements"
path = "fuzz_targets/fuzz_parse_statements.rs"

[[bin]]
name = "fuzz_parse_time"
path = "fuzz_targets/fuzz_parse_time.rs"

[dependencies]
honggfuzz = "0.5.54"
repr = { path = "../src/repr" }
sql-parser = { path = "../src/sql-parser" }
