[package]
name = "mz-fuzz"
version = "0.0.1"
edition = "2021"
rust-version = "1.59.0"
publish = false

[[bin]]
name = "fuzz_parse_statements"
path = "fuzz_targets/fuzz_parse_statements.rs"

[[bin]]
name = "fuzz_parse_time"
path = "fuzz_targets/fuzz_parse_time.rs"

[dependencies]
honggfuzz = "0.5.54"
mz-repr = { path = "../src/repr" }
mz-sql-parser = { path = "../src/sql-parser" }
