[package]
name = "billing-demo"
description = "Microservice demo using Materialize to power a real-time billing usecase"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.58.0"

[dependencies]
anyhow = "1.0.52"
bytes = "1.1.0"
chrono = { version = "0.4.0", default-features = false, features = ["clock", "std"] }
clap = { version = "3.0.14", features = ["derive"] }
csv = "1.1.6"
env_logger = "0.9.0"
futures = "0.3.19"
futures-channel = "0.3.16"
hex = "0.4.3"
tracing = "0.1.29"
ore = { path = "../../src/ore", features = ["task"] }
postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "mz-0.7.2" }
prost = "0.9.0"
prost-types = "0.9.0"
rand = "0.8.4"
rand_distr = "0.4.3"
test-util = { path = "../../test/test-util" }
tokio = "1.16.1"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", branch = "mz-0.7.2" }
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
prost-build = "0.9.1"
