[package]
name = "mbtaupsert"
version = "0.1.0"
authors = ["Andi Wang <andi@materialize.io>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
futures = "0.3"
getopts = "0.2"
avro = {path = "../../src/avro", package = "mz-avro"}
json = "0.12.4"
serde_json = "1.0.53"
ordered-float = { version = "2.0.0", features = ["serde"] }
parse_duration = "2.1.0"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build", "libz-static"] }
reqwest = { version = "0.10.4", features = ["native-tls-vendored"] }
