# Copyright Materialize, Inc. and contributors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License in the LICENSE file at the
# root of this repository, or online at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "mcp_materialize_agents"
version = "0.3.1"
description = "Live data layer for agents. Expose canonical business objects as database-consistent, instantly-queryable SQL views via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Materialize Inc", email = "support@materialize.com"}
]

keywords = ["materialize", "mcp", "database", "api"]
dependencies = [
    "mcp>=1.10.1",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp_materialize_agents = "mcp_materialize_agents.mcp_materialize_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_materialize_agents"]

[tool.hatch.build]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "hatch>=1.9.4"
]

[tool.ruff]
line-length = 88
lint.select = ["I", "UP", "F", "E"]
lint.extend-select = ["E501"]
