[package]
name = "json-flattened-view-gen"
version = "0.1.0"
authors = ["Materialize, Inc."]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.58.0"

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.10", features = ["derive"] }
serde = "1.0.133"
serde_json = "1.0.75"
ore = { path = "../../src/ore" }
