[package]
name = "mbta-to-mtrlz"
description = "Converts MBTA streams to Kafka streams to use in Materialize"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.45"
byteorder = "1.4.3"
futures = "0.3.17"
json = "0.12.4"
ordered-float = { version = "2.8.0", features = ["serde"] }
ore = { path = "../../src/ore" }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build", "libz-static"] }
repr = { path = "../../src/repr" }
serde_json = "1.0.71"
structopt = "0.3.25"
test-util = { path = "../../test/test-util" }
tokio = "1.13.0"
