[package]
name = "mbta-to-mtrlz"
description = "Converts MBTA streams to Kafka streams to use in Materialize"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.58.0"

[dependencies]
anyhow = "1.0.52"
byteorder = "1.4.3"
clap = { version = "3.0.14", features = ["derive"] }
futures = "0.3.19"
json = "0.12.4"
ordered-float = { version = "2.10.0", features = ["serde"] }
ore = { path = "../../src/ore" }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build", "libz-static"] }
repr = { path = "../../src/repr" }
serde_json = "1.0.78"
test-util = { path = "../../test/test-util" }
tokio = "1.16.1"
