[package]
name = "mz-mbta"
description = "Converts MBTA streams to Kafka streams to use in Materialize"
version = "0.0.0"
edition = "2021"
rust-version = "1.58.0"
publish = false

[dependencies]
anyhow = "1.0.55"
byteorder = "1.4.3"
clap = { version = "3.1.1", features = ["derive"] }
futures = "0.3.21"
json = "0.12.4"
mz-ore = { path = "../../src/ore" }
mz-repr = { path = "../../src/repr" }
mz-test-util = { path = "../../test/test-util" }
ordered-float = { version = "2.10.0", features = ["serde"] }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build", "libz-static"] }
serde_json = "1.0.79"
tokio = "1.17.0"
