[package]
name = "mz-adapter-types"
description = "Types for Materialize's adapter layer."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mz-dyncfg = { path = "../dyncfg" }
mz-ore = { path = "../ore" }
mz-repr = { path = "../repr" }
mz-storage-types = { path = "../storage-types" }
serde = "1.0.225"
timely = "0.24.0"
workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }
tracing = "0.1.37"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[features]
default = ["workspace-hack"]
