[package]
name = "mz-adapter-types"
description = "Types for Materialize's adapter layer."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mz-dyncfg = { path = "../dyncfg" }
mz-ore = { path = "../ore" }
mz-repr = { path = "../repr" }
mz-storage-types = { path = "../storage-types" }
serde = "1.0.219"
serde_json = "1.0.149"
timely = "0.28.1"
tracing = "0.1.44"

[features]
default = []
