[package]
name = "mz-adapter"
description = "Materialize's adapter layer."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
arrow = { version = "55.2.0", default-features = false }
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.10.1"
bytesize = "2.1.0"
chrono = { version = "0.4.39", default-features = false, features = ["std"] }
dec = "0.4.8"
derivative = "2.2.0"
differential-dataflow = "0.18.0"
enum-kinds = "0.5.1"
fail = { version = "0.5.1", features = ["failpoints"] }
futures = "0.3.31"
governor = "0.10.1"
hex = "0.4.3"
http = "1.2.0"
hyper-tls = "0.5.0"
ipnet = "2.11.0"
itertools = "0.14.0"
launchdarkly-server-sdk = { version = "2.5.1", default-features = false }
maplit = "1.0.2"
mz-adapter-types = { path = "../adapter-types" }
mz-audit-log = { path = "../audit-log" }
mz-auth = { path = "../auth" }
mz-build-info = { path = "../build-info" }
mz-catalog = { path = "../catalog" }
mz-cloud-provider = { path = "../cloud-provider", default-features = false }
mz-cloud-resources = { path = "../cloud-resources" }
mz-cluster-client = { path = "../cluster-client" }
mz-compute-client = { path = "../compute-client" }
mz-compute-types = { path = "../compute-types" }
mz-controller = { path = "../controller" }
mz-controller-types = { path = "../controller-types" }
mz-dyncfg = { path = "../dyncfg" }
mz-expr = { path = "../expr" }
mz-license-keys = { path = "../license-keys" }
mz-kafka-util = { path = "../kafka-util" }
mz-metrics = { path = "../metrics" }
mz-mysql-util = { path = "../mysql-util" }
mz-orchestrator = { path = "../orchestrator" }
mz-ore = { path = "../ore", features = ["chrono", "async", "panic", "process", "tracing", "id_gen"] }
mz-persist-types = { path = "../persist-types" }
mz-persist-client = { path = "../persist-client" }
mz-pgcopy = { path = "../pgcopy" }
mz-pgrepr = { path = "../pgrepr" }
mz-pgwire-common = { path = "../pgwire-common" }
mz-postgres-util = { path = "../postgres-util" }
mz-proto = { path = "../proto" }
mz-repr = { path = "../repr", features = ["tracing"] }
mz-rocksdb-types = { path = "../rocksdb-types" }
mz-secrets = { path = "../secrets" }
mz-segment = { path = "../segment" }
mz-service = { path = "../service" }
mz-sql = { path = "../sql" }
mz-sql-parser = { path = "../sql-parser" }
mz-sql-server-util = { path = "../sql-server-util"}
mz-ssh-util = { path = "../ssh-util" }
mz-storage-client = { path = "../storage-client" }
mz-storage-types = { path = "../storage-types" }
mz-tracing = { path = "../tracing" }
mz-transform = { path = "../transform" }
mz-timestamp-oracle = { path = "../timestamp-oracle" }
openssl = { version = "0.10.75", features = ["vendored"] }
opentelemetry = { version = "0.24.0", features = ["trace"] }
prometheus = { version = "0.14.0", default-features = false }
prost = { version = "0.13.5", features = ["no-recursion-limit"] }
qcell = "0.5"
rand = "0.9.2"
rand_chacha = "0.9.0"
semver = "1.0.27"
serde = "1.0.219"
serde_json = "1.0.145"
serde_plain = "1.0.2"
sha2 = "0.10.9"
smallvec = { version = "1.15.1", features = ["union"] }
static_assertions = "1.1"
timely = "0.25.1"
tokio = { version = "1.48.0", features = ["rt", "time"] }
tokio-postgres = { version = "0.7.15" }
tokio-stream = "0.1.17"
tracing = "0.1.43"
tracing-core = "0.1.35"
tracing-opentelemetry = { version = "0.25.0" }
tracing-subscriber = "0.3.22"
thiserror = "2.0.17"
url = "2.5.7"
uuid = { version = "1.19.0" }
workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async_tokio"] }
datadriven = "0.9.0"
mz-persist = { path = "../persist", features = ["turmoil"] }
mz-persist-client = { path = "../persist-client", features = ["turmoil"] }
turmoil = "0.7.0"

[[bench]]
name = "catalog"
harness = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[features]
default = ["workspace-hack"]
